--- a/client/package.json
+++ b/client/package.json
@@ -7,24 +7,24 @@
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
-    "react": "^16.6.1",
+    "react": "^16.6.3",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.6.3",
+    "react-dropdown": "^1.6.2",
     "react-grid-layout": "^0.16.6",
-    "react-live-clock": "^2.0.3",
-    "react-moment": "^0.8.3",
+    "react-live-clock": "^3.0.0",
+    "react-moment": "^0.8.4",
     "react-open-weather": "^0.4.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "react-select": "^2.1.1",
-    "react-transition-group": "^2.5.0",
+    "react-select": "^2.1.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "node-sass-chokidar": "^1.3.4",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
