--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "concurrently": "^4.0.1",
+    "concurrently": "^4.1.0",
     "express": "^4.16.4",
-    "gravatar": "^1.6.0",
-    "jsonwebtoken": "^8.3.0",
+    "gravatar": "^1.8.0",
+    "jsonwebtoken": "^8.4.0",
     "jwt-decode": "^2.2.0",
-    "mongoose": "^5.3.11",
+    "mongoose": "^5.3.14",
     "node-sass-chokidar": "^1.3.4",
-    "nodemailer": "^4.6.8",
+    "nodemailer": "^4.7.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-scripts": "^2.1.1",
     "validator": "^10.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.6"
+    "nodemon": "^1.18.7"
   },
   "scripts": {
     "start": "node server.js",
