--- a/client/package.json
+++ b/client/package.json
@@ -6,19 +6,20 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "jwt-decode": "^2.2.0",
-    "moment": "^2.22.2",
-    "react": "^16.6.3",
+    "moment": "^2.24.0",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.8.6",
     "react-dropdown": "^1.6.2",
     "react-grid-layout": "^0.16.6",
-    "react-live-clock": "^3.0.0",
+    "react-live-clock": "^3.1.0",
     "react-moment": "^0.8.4",
     "react-open-weather": "^0.4.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
-    "react-select": "^2.1.2",
+    "react-scripts": "^2.1.8",
+    "react-select": "^2.4.2",
+    "react-transition-group": "^2.7.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
